# ZeroEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Engine/: CMakeLists.txt
Engine/BuiltinAssets/Shaders/: test.slang
Engine/Source/CodeGenTemplates/: allReflectionFile.inja  allSerializer.h.inja  allSerializer.ipp.inja  commonReflectionFile.inja  commonSerializerGenFile.inja
Engine/Source/Editor/: CMakeLists.txt  EditorDefines.h  Game.cpp  Game.h  Main.cpp
Engine/Source/Editor/GUI/: EditorGUIManager.cpp  EditorGUIManager.h  EditorGUIManager_OpenGLImpl.cpp  EditorGUIManager_OpenGLImpl.h  EditorImGUIManager.cpp  EditorImGUIManager.h  EditorImGUIManager_OpenGLImpl.cpp  EditorImGUIManager_OpenGLImpl.h
Engine/Source/Editor/GUI/GUITexture/: EditorGUITexManager.cpp  EditorGUITexManager.h  EditorGUITexManager_OpenGLImpl.cpp  EditorGUITexManager_OpenGLImpl.h
Engine/Source/Editor/GUI/Panels/: EditorGUIBasePanel.cpp  EditorGUIBasePanel.h  EditorGUIContentBrowserPanel.cpp  EditorGUIContentBrowserPanel.h  EditorGUIOutlinerPanel.cpp  EditorGUIOutlinerPanel.h  EditorGUIPanelManager.cpp  EditorGUIPanelManager.h  EditorGUIScenePanel.cpp  EditorGUIScenePanel.h  EditorGUIViewportPanel.cpp  EditorGUIViewportPanel.h
Engine/Source/Editor/GUI/Widgets/: EditorGUIMainDockingWidget.inl  EditorGUIWidgets.hpp
Engine/Source/MetaParser/: CMakeLists.txt  main.cpp
Engine/Source/MetaParser/CXClass/Cursor/: Cursor.cpp  Cursor.h
Engine/Source/MetaParser/CXClass/Type/: Type.cpp  Type.h
Engine/Source/MetaParser/Common/: Config.h  SchemaModule.h  pch.h
Engine/Source/MetaParser/CppLanguage/: Class.cpp  Class.h  Field.cpp  Field.h  Method.cpp  Method.h  TypeInfo.cpp  TypeInfo.h
Engine/Source/MetaParser/Generator/: Generator.cpp  Generator.h  ReflectionGenerator.cpp  ReflectionGenerator.h  SerializerGenerator.cpp  SerializerGenerator.h  TemplateManager.cpp  TemplateManager.h
Engine/Source/MetaParser/Meta/: MetaInfo.cpp  MetaInfo.h
Engine/Source/MetaParser/Parser/: Parser.cpp  Parser.h
Engine/Source/MetaParser/Util/: MetaUtils.h
Engine/Source/Precompile/: precompile.cmake  precompile.json.in
Engine/Source/Runtime/: CMakeLists.txt  pch.h
Engine/Source/Runtime/Component/: ComponentBase.cpp  ComponentBase.h  ComponentDefines.h
Engine/Source/Runtime/Core/: GlobalDataManager.cpp  GlobalDataManager.h
Engine/Source/Runtime/Core/Assert/: Assert.h
Engine/Source/Runtime/Core/Config/: EngineConfig.cpp  EngineConfig.h  ProjectConfig.cpp  ProjectConfig.h
Engine/Source/Runtime/Core/Event/: Event.h  EventManager.cpp  EventManager.h
Engine/Source/Runtime/Core/FileSystem/: FileSystem.cpp  FileSystem.h
Engine/Source/Runtime/Core/Hash/: Hash.cpp  Hash.h  Identifier.h
Engine/Source/Runtime/Core/Log/: Logger.cpp  Logger.h
Engine/Source/Runtime/Core/Math/: Math.h
Engine/Source/Runtime/Core/Reflection/: ReflectionManager.cpp  ReflectionManager.h
Engine/Source/Runtime/Core/Reflection/Example/: Animal.h  Student.cpp  Student.h
Engine/Source/Runtime/Core/Reflection/Example/_generated/: Student.reflection.gen.h
Engine/Source/Runtime/Core/Serialize/: SerializeManager.cpp  SerializeManager.h
Engine/Source/Runtime/Core/UUID/: UUID.cpp  UUID.h
Engine/Source/Runtime/Function/Input/: GlfwInputManager.cpp  GlfwInputManager.h  InputDefines.h  InputManager.cpp  InputManager.h
Engine/Source/Runtime/Function/Render/: RenderDefines.h  RenderEngine.cpp  RenderEngine.h
Engine/Source/Runtime/Function/Render/Feature/CubeMap/: CubeMap.cpp  CubeMap.h
Engine/Source/Runtime/Function/Render/Feature/RenderPass/: RenderPassBase.h  RenderPassManager.cpp  RenderPassManager.h
Engine/Source/Runtime/Function/Render/FrameBuffer/: FBOManager.cpp  FBOManager.h  FrameBufferObject.h
Engine/Source/Runtime/Function/Render/Material/: Material.cpp  Material.h  MaterialData.cpp  MaterialData.h
Engine/Source/Runtime/Function/Render/RHI/: RHI.cpp  RHI.h  RenderDefines.h
Engine/Source/Runtime/Function/Render/RHI/OpenGL/: GLRenderDefines.h  GLVertexArray.cpp  GLVertexArray.h  GLVertexBufferLayout.hpp  RHI_OpenGLImpl.cpp  RHI_OpenGLImpl.h
Engine/Source/Runtime/Function/Render/Shader/: Shader.cpp  Shader.h  SlangShaderParser.cpp  SlangShaderParser.h
Engine/Source/Runtime/Function/Render/Texture/: Texture.cpp  Texture.h
Engine/Source/Runtime/Function/Render/Window/: GlfwWindowManager.cpp  GlfwWindowManager.h  WindowManager.cpp  WindowManager.h
Engine/Source/Runtime/Function/Script/NativeCpp/: CoreMinimal.h
Engine/Source/Runtime/Resource/: ResourceSystem.cpp  ResourceSystem.h
Engine/Source/Runtime/_generated/reflection/: Animal.reflgen.h  Student.reflgen.h  all_reflection.h
